--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Sunnatulla</title>
+    <title>Sunnatulla's Personal Site</title>
 </head>
 
 <body>
